# raddle.teams

./: .env.example  .env.testing  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  DESIGN_CONSISTENCY_UPDATES.md  FRONTEND_UPDATE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVE_TESTS.md  PLAN.md  README.md  TODO.md  TOURNAMENT_FEATURE_PLAN.md  TOURNAMENT_IMPLEMENTATION_COMPLETE.md  TOURNAMENT_VERIFICATION.md  codex-hint-system.md  com.nadeem.raddle.plist  custom_logging.py  eslint.config.js  hints-voting-system-plan.md  index.html  install.py  main.py  package-lock.json  package.json  plan.md  pyproject.toml  pytest.ini  raddle_teams.db  rt  run.py  run_server.py  run_tests.py  run_tournament_tests.sh  settings.py  (+7 more)
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
backend/: api.py  auth.py  custom_logging.py  database.py  db_models.py  dependencies.py  enums.py  game_logic.py  main.py  models.py  puzzles_sync.py  pyproject.toml  requirements.txt  schemas.py  settings.py  websocket.py  websocket_manager.py
backend-rust/: .env.example  .gitignore  COMPARISON.md  Cargo.toml  DEPLOYMENT.md  GETTING_STARTED.md  README.md  TESTING.md
backend-rust/cli/src/: main.rs
backend-rust/src/: config.rs  extractors.rs  lib.rs  logging.rs  main.rs  schemas.rs
backend-rust/src/database/: mod.rs  models.rs  player.rs  team.rs
backend-rust/src/routes/: lobby.rs  mod.rs
backend-rust/src/routes/admin/: auth.rs  lobby.rs  mod.rs  team.rs
backend-rust/src/websocket/: events.rs  handlers.rs  manager.rs  mod.rs
backend-rust/tests/: database_tests.rs  schema_tests.rs
backend/api/: game.py  leaderboard.py  lobby.py  puzzle.py  stats.py  team.py  tutorial.py
backend/api/admin/: auth.py  game.py  lobby.py  teams.py
backend/api/admin/lobby/: index.py  team.py  timer_poller.py  timer_task.py
backend/app/: config.py
backend/app/api/: router.py
backend/app/api/routers/: auth.py  lists.py  ranking.py  sync.py
backend/app/schemas/: lists.py  movies.py  ranking.py  sync.py
backend/app/services/: conflict_resolver.py  external_apis.py  notifications.py  ranking.py  security.py
backend/database/: __init__.py  models.py
backend/game/: puzzles.py  state_machine.py
backend/puzzles/: example.json
backend/services/: game_service.py  puzzle_service.py  websocket_service.py
backend/tests/: test_awards.py  test_models.py  test_name_generator.py  test_points_calculation.py  test_puzzles.py  test_state_machine.py  test_tournament.py
backend/utils/: awards.py  name_generator.py
backend/websocket/: api.py  events.py  managers.py
docs/: README.md
e2e/: conftest.py  test_admin_route.py  test_comprehensive_game_flow.py  test_game_flows.py  test_game_route.py  test_landing_route.py  test_lobby_route.py  test_special_routes.py  test_tournament_flow.py  test_tutorial.py  test_tutorial_new.py
frontend/: .env.example  .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
mm/: .gitignore  README.md
mobile/: project.yml
puzzles/: tutorial.json
puzzles_from_raddle/: convert_yaml_to_json.py  pull_down_raddles.py
superlatives/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  VERIFICATION.md  eslint.config.js  issues.md  package-lock.json  package.json  pyproject.toml  ss  tsconfig.json  vite.config.ts
test-frontend/: README.md  app.js  index.html
tests/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_app_basic.py  test_puzzle_service.py  test_suite_summary.py  test_tutorial_api.py
(+1202 files in other folders)
